--- a/z/package.json
+++ b/z/package.json
@@ -11,6 +11,7 @@
     "bootstrap-dark-5": "^1.1.3",
     "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-aria": "^3.33.1",
     "react-bootstrap": "^2.10.4",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
