--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "os-browserify": "^0.3.0",
     "react-bootstrap": "^2.10.4",
-    "react-router-dom": "^6.24.1"
+    "react-router-dom": "^6.24.1",
+    "stream-browserify": "^3.0.0"
   }
 }
