--- a/z/package.json
+++ b/z/package.json
@@ -9,14 +9,21 @@
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "bootstrap-dark-5": "^1.1.3",
+    "csv-writer": "^1.6.0",
+    "file-saver": "^2.0.5",
     "jquery": "^3.7.1",
+    "json2csv": "^6.0.0-alpha.2",
+    "os-browserify": "^0.3.0",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-aria": "^3.33.1",
     "react-bootstrap": "^2.10.4",
+    "react-csv": "^2.2.2",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
+    "stream-browserify": "^3.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
